[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Start Screen/Pause Menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Audio/UI/level_select.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/UI/hover_over.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/UI/next_screen.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Start Screen/font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/Start Screen/Settings/Settings.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.6 ) ]
}

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="Theme" id=9]
default_font = ExtResource( 5 )
Button/colors/font_color = Color( 0.223529, 0.439216, 0.478431, 1 )
Button/colors/font_color_disabled = Color( 0.607843, 0.133333, 0.168627, 1 )
Button/colors/font_color_focus = Color( 0.584314, 0.878431, 0.8, 1 )
Button/colors/font_color_hover = Color( 0.584314, 0.878431, 0.8, 1 )
Button/colors/font_color_pressed = Color( 0.584314, 0.878431, 0.8, 1 )
Button/styles/focus = SubResource( 8 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )
CheckBox/styles/normal = SubResource( 7 )

[sub_resource type="ButtonGroup" id=10]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.5
margin_top = -67.0
margin_right = 83.5
margin_bottom = 67.0
theme = SubResource( 9 )
custom_constants/separation = 10

[node name="Resume" type="Button" parent="Menu"]
margin_right = 167.0
margin_bottom = 42.0
group = SubResource( 10 )
text = "Resume"

[node name="Restart" type="Button" parent="Menu"]
margin_top = 52.0
margin_right = 167.0
margin_bottom = 94.0
group = SubResource( 10 )
text = "Restart"

[node name="Settings" type="Button" parent="Menu"]
margin_top = 104.0
margin_right = 167.0
margin_bottom = 146.0
group = SubResource( 10 )
text = "Settings"

[node name="Exit" type="Button" parent="Menu"]
margin_top = 156.0
margin_right = 167.0
margin_bottom = 198.0
group = SubResource( 10 )
text = "Exit"

[node name="Settings" parent="." instance=ExtResource( 6 )]
visible = false
margin_top = 38.0
margin_bottom = 38.0

[node name="Resume" type="Button" parent="Settings"]
margin_top = 146.0
margin_right = 1024.0
margin_bottom = 188.0
group = SubResource( 10 )
text = "Resume"

[node name="Sounds" type="Node" parent="."]

[node name="hover_over" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )

[node name="next_screen" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )

[node name="level_select" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 2 )

[connection signal="mouse_entered" from="Menu/Resume" to="." method="_on_MenuButton_hovered"]
[connection signal="pressed" from="Menu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="mouse_entered" from="Menu/Restart" to="." method="_on_MenuButton_hovered"]
[connection signal="pressed" from="Menu/Restart" to="." method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="Menu/Settings" to="." method="_on_MenuButton_hovered"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="Menu/Exit" to="." method="_on_MenuButton_hovered"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="mouse_entered" from="Settings/Resume" to="." method="_on_MenuButton_hovered"]
[connection signal="pressed" from="Settings/Resume" to="." method="_on_Resume_pressed"]
